# pytroll-collectors

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .stickler.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASING.md  TODO.rst  changelog.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy.yaml  deploy_sdist.yaml
continuous_integration/: environment.yaml
doc/source/: conf.py  index.rst
examples/: cat.cfg_template  cat_nameservers.cfg_template  cat_pub_port.cfg_template  cat_use_service.cfg_template  gatherer_config.ini_template  geographic_gatherer_config.ini_template  global_mosaic.yaml_template  s3stalker.yaml  s3stalker_log.yaml_template  s3stalker_runner.yaml_template  scale_images.ini_template  scisys_receiver.yaml_template  segment_gatherer.ini_template  segment_gatherer_himawari.ini_template  segment_gatherer_hrpt_pps.yaml_template  segment_gatherer_msg.yaml_template  segment_gatherer_msg_and_iodc.yaml_template  segment_gatherer_msg_hour.yaml_template  segment_gatherer_use_providing_server.ini_template  segment_gatherer_use_services.ini_template  trollstalker_config.ini_template  trollstalker_config_ref_file.ini_template  zipcollector_config.cfg  zipcollector_config.yaml
pytroll_collectors/: __init__.py  _version.py  config.py  file_notifiers.py  fsspec_to_message.py  geographic_gatherer.py  global_mosaic.py  harvest_EUM_schedules.py  harvest_schedules.py  helper_functions.py  image_scaler.py  logging.py  mapscript_recorder.py  region_collector.py  s3stalker.py  s3stalker_daemon_runner.py  scisys.py  segments.py  trigger.py  trollstalker.py  utils.py  version.py
pytroll_collectors/scripts/: cat.py  geographic_gatherer.py  s3stalker.py  s3stalker_daemon.py  scisys_receiver.py  segment_gatherer.py  trollstalker.py  trollstalker2.py  zipcollector_runner.py
pytroll_collectors/tests/: __init__.py  conftest.py  test_config.py  test_fsspec_to_message.py  test_geographic_gatherer.py  test_global_mosaic.py  test_harvest_EUM_schedules.py  test_harvest_schedules.py  test_helper_functions.py  test_image_scaler.py  test_logging.py  test_mapscript_recorder.py  test_region_collector.py  test_s3stalker.py  test_s3stalker_daemon_runner.py  test_scisys.py  test_segments.py  test_trigger.py  test_triggers.py  test_trollstalker.py
pytroll_collectors/tests/data/: areas.def  areas.yaml  mpop.cfg  scale_images.ini  segments.ini  segments_double.yaml  segments_double_different.yaml  segments_double_no_segments.yaml  segments_double_no_segments_collections.yaml  segments_noaa20.yaml  segments_nwcsaf_geo.ini  segments_pps.yaml  segments_single.yaml  segments_single_north.yaml  trollstalker_config.ini
pytroll_collectors/triggers/: __init__.py  _base.py  _inotify.py  _posttroll.py  _watchdog.py
