[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytroll-collectors"
dynamic = ["version"]
description = "Pytroll data collectors"
readme = "README.md"
license = ""
requires-python = ">=3.11"
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "posttroll>=1.3.0",
    "pyyaml",
    "trollsift",
]

[project.optional-dependencies]
all = [
    "fsspec",
    "netifaces",
    "pyresample",
    "python-dateutil",
    "pytroll-schedule",
    "s3fs",
    "watchdog",
    "watchdog!=4.0.0",
]
geographic_gatherer = [
    "pyresample",
    "pytroll-schedule",
    "watchdog",
]
s3_segment_gatherer = [
    "fsspec",
]
s3stalker = [
    "python-dateutil",
    "s3fs",
]
scisys_receiver = [
    "netifaces",
]
trollstalker = [
    "watchdog!=4.0.0",
]

[project.urls]
Homepage = "https://github.com/pytroll/pytroll-collectors"

[tool.hatch.version]
path = "pytroll_collectors/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pytroll_collectors",
]
